security: Remove .mcp.json from git and fix Docker build
SECURITY FIX: .mcp.json contained sensitive credentials (LinkedIn cookies,
GitHub tokens) and should never have been committed to version control.

Changes:
- Remove .mcp.json from git tracking (contains secrets)
- Add .mcp.json to .gitignore
- Create .mcp.json.example as template without credentials
- Update Dockerfile to not COPY .mcp.json (use volume mount instead)
- Add .mcp.json.README.md with setup and Docker usage instructions

Docker Build Fix:
- Removed COPY .mcp.json from app and worker stages
- Added comments explaining volume mount approach
- Docker builds will now succeed without .mcp.json in repo

Security Best Practices:
- MCP config must be mounted at runtime via volume
- Or use environment variables for credentials
- Or use Docker secrets for production
- Never commit credentials to git

This fixes the GitHub Actions Docker build failure:
https://github.com/linus-mcmanamey/need_a_job/actions/runs/18866272803

Resolves Docker build error:
ERROR: "/.mcp.json": not found

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-# Environment variables
+# Environment variables and secrets
 .env
 .env.local
 .env.*.local
 .env.production
+
+# MCP Configuration (contains API keys and cookies)
+.mcp.json
 
 # Python
 __pycache__/
